Fixed Alignment of Content

--- a/styles/main.css
+++ b/styles/main.css
@@ -19,7 +19,6 @@ video {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 64px;
     padding: 3px;
     background-color: black;
 }
