--- a/styles/rows-and-columns.css
+++ b/styles/rows-and-columns.css
@@ -38,6 +38,7 @@
 .contentRow {
     display: flex;
     align-items: center;
+    margin-bottom: 64px;
 }
 
 .contentRow:after {
